Bug 1274692 - Remove CG limitation since the backend is skia. r=mstange